ADD_SUBDIRECTORY(examples)

SET(WIDGETS_SRCS
	nvWidgets.h
	nvWidgets.cpp
	nvGLWidgets.h
	nvGLWidgets.cpp
	nvGlutWidgets.h
	nvGlutWidgets.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${GLEW_INCLUDE_PATH} ${GLUT_INCLUDE_PATH} ${OPENGL_INCLUDE_PATH})

ADD_DEFINITIONS(-DNVWIDGETS_EXPORTS)

# targets
ADD_LIBRARY(nvwidgets SHARED ${WIDGETS_SRCS})

TARGET_LINK_LIBRARIES(nvwidgets ${GLEW_LIBRARY} ${GLUT_LIBRARY} ${OPENGL_LIBRARY})

INSTALL(TARGETS nvwidgets
	RUNTIME DESTINATION bin
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib/static)
